# cpp-coverage-example

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: pr-any.yml
hello/include/: hello.hpp
hello/native/: CMakeLists.txt  main.cpp
hello/src/: CMakeLists.txt  hello.cpp
tests/: CMakeLists.txt
tests/src/: test.h.in  test_hello.cpp
